objects/SurveyQuestionResponse__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <formula>IF(SurveyTaker__r.Visit__r.Engineer2__c&lt;&gt;NULL,SurveyTaker__r.Visit__r.Engineer2__r.Name, SurveyTaker__r.Visit__r.X2nd_Technician__r.Name )</formula>
    <label>Engineer</label>
    <type>Text</type>
</CustomField>