objects/SurveyQuestionResponse__c/fields/Rating_Status__c.field-meta.xml
<CustomField>
    <fullName>Rating_Status__c</fullName>
    <formula>IF( Survey_Question__r.Name ==&apos;Based on your recent experience with the Eclipse Dental engineer,how likely are&apos;,&apos;Eng&apos;,

IF(Survey_Question__r.Name ==&apos;Based on your recent experience booking your service or repair call with the Ec&apos;,&apos;Ofc&apos;,&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating For</label>
    <type>Text</type>
</CustomField>