objects/SurveyQuestionResponse__c/fields/Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>Rating_Type__c</fullName>
    <formula>IF(Rating__c&gt;=9,&apos;Promoter&apos;,if(Rating__c&lt;=6,&apos;Detractor&apos;,if(AND(Rating__c&gt;6,Rating__c&lt;9),&apos;Passives&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Type</label>
    <type>Text</type>
</CustomField>