objects/SurveyQuestionResponse__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <formula>SurveyTaker__r.Visit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit</label>
    <type>Text</type>
</CustomField>