objects/SurveyQuestionResponse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SurveyTaker__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>